<?xml version="1.0"?>
<package format="2">
  <name>camtoros</name>
  <version>1.0.0</version>
  <description>
  The camtoros package.
  A HikVision ROS Driver, Converted Hik camera to ROS standard message.
  </description>

  <maintainer email="chaochengzhu@qq.com">Chaozheng Zhu</maintainer>
  <maintainer email="xjlongfeiyu@outlook.com">Loren</maintainer>

  <license>BSD-3-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>